--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
   .visually-hidden {
     left: 14px;
   }
+}
 
 body {
   font-family: "Roboto", sans-serif;
@@ -80,10 +81,67 @@ a {
 .our-team .container {
   display: block;
 }
+
+.our-clients .container {
+  display: block;
+}
+
+.footer .container {
+  display: block;
+  text-align: center;
+}
+
+.portfolio .container {
+  display: block;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+  }
+  .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    height: auto;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  .hero .container {
+    height: 600px;
+  }
+  .what-we-do .container {
+    display: block;
+  }
+  .footer .container {
+    padding-top: 60px;
+    display: flex;
+    text-align: left;
+  }
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 
 .close-btn {
   display: flex;
