--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,15 +1,76 @@
 .container {
-	width: 1200px;
+	width: 100%;
+	min-width: 320px;
 	padding: 0 15px;
-	margin: 0 auto;
 
-	.footer & {
-		padding-top: 60px;
+	.hero & {
+		height: 400px;
 		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin: 0 auto;
 	}
 
-	.header & {
+	.our-team & {
+		display: block;
+	}
+
+	.our-clients & {
+		display: block;
+	}
+
+	.footer & {
+		display: block;
+		text-align: center;
+	}
+
+	.portfolio & {
+		display: block;
+	}
+}
+
+@media screen and (min-width: 320px) {
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.container {
 		display: flex;
 		align-items: center;
+		padding: 0 15px;
+
+		.footer & {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-around;
+			align-items: baseline;
+		}
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.container {
+		max-width: 1200px;
+		height: auto;
+		padding: 0 15px;
+		margin: 0 auto;
+
+		.hero & {
+			height: 600px;
+		}
+
+		.what-we-do & {
+			display: block;
+		}
+
+		.footer & {
+			padding-top: 60px;
+			display: flex;
+			text-align: left;
+		}
 	}
 }
