--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -1,19 +1,31 @@
-.our-clients__list {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+.our-clients {
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__icon {
+		width: 106px;
+		height: 60px;
+		fill: currentColor;
+	}
+
+	&__item {
+		margin-bottom: 30px;
+		min-width: 230px;
+	}
 }
 
 .our-clients__link {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
-	width: 170px;
+	justify-content: center;
 	height: 92px;
 	border: 1px solid #afb1b8;
 	box-sizing: border-box;
 	border-radius: 4px;
-	padding: 17.71px 32px 14.25px;
 	color: #afb1b8;
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 		color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -25,8 +37,45 @@
 	}
 }
 
-.our-clients__icon {
-	width: 106px;
-	height: 60px;
-	fill: currentColor;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+	.our-clients__list {
+		justify-content: space-around;
+	}
+
+	.our-clients__item {
+		flex-basis: calc(100% / 2 - 30px);
+		min-width: 210px;
+		flex-grow: 1;
+
+		&:nth-child(2n + 1) {
+			margin-right: 30px;
+		}
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+	.our-clients__list {
+		justify-content: space-around;
+	}
+
+	.our-clients__item {
+		flex-basis: calc(100% / 3 - 30px);
+		min-width: 226px;
+		flex-grow: 1;
+
+		&:not(:nth-child(3n)) {
+			margin-right: 30px;
+		}
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.our-clients__list {
+		justify-content: space-between;
+	}
+
+	.our-clients__item {
+		min-width: 170px;
+		margin-bottom: 0;
+	}
 }
