--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,11 +1,31 @@
 .our-team {
 	background-color: $secondary-backgorund-color;
 	margin: 0 auto;
-}
 
-.our-team__list {
-	display: flex;
-	justify-content: space-between;
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	&__employee {
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 0.842;
+		text-align: center;
+		letter-spacing: 0.03em;
+		padding-top: 30px;
+		padding-bottom: 10px;
+	}
+
+	&__occupation {
+		font-size: 16px;
+		line-height: 1.187;
+		text-align: center;
+		letter-spacing: 0.03em;
+		color: $secondary-txt-color;
+		padding-bottom: 16px;
+	}
 }
 
 .our-team__item {
@@ -13,23 +33,31 @@
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
 		0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
+
+	&:not(:last-child) {
+		margin-bottom: 30px;
+	}
 }
 
-.our-team__employee {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 0.842;
-	text-align: center;
-	letter-spacing: 0.03em;
-	padding-top: 30px;
-	padding-bottom: 10px;
+// <!-- TABLET -->
+
+@media screen and (min-width: 768px) {
+	.our-team__list {
+		justify-content: space-around;
+	}
+
+	.our-team__item {
+		margin-bottom: 30px;
+	}
 }
 
-.our-team__occupation {
-	font-size: 16px;
-	line-height: 1.187;
-	text-align: center;
-	letter-spacing: 0.03em;
-	color: $secondary-txt-color;
-	padding-bottom: 16px;
+@media screen and (min-width: 1200px) {
+	.our-team__item {
+		margin-bottom: 0;
+
+		&:not(:last-child) {
+			margin-bottom: 0;
+		}
+	}
 }
+
