--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -1,26 +1,39 @@
-.what-we-do__list {
-	display: flex;
-	justify-content: space-between;
+.what-we-do {
+	display: none;
 }
 
-.what-we-do__item {
-	position: relative;
-}
+// <!-- DESKTOP -->
 
-.what-we-do__text {
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.143;
-	text-align: center;
-	letter-spacing: 0.03em;
-	text-transform: uppercase;
-	color: $primary-light-txt-color;
-	width: 100%;
-	height: 70px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: rgba(47, 48, 58, 0.8);
-	position: absolute;
-	bottom: 0;
+@media screen and (min-width: 1200px) {
+	.what-we-do {
+		display: block;
+		padding-bottom: 94px;
+
+		&__list {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		&__item {
+			position: relative;
+		}
+
+		&__text {
+			font-weight: 700;
+			font-size: 14px;
+			line-height: 1.143;
+			text-align: center;
+			letter-spacing: 0.03em;
+			text-transform: uppercase;
+			color: $primary-light-txt-color;
+			width: 100%;
+			height: 70px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background: rgba(47, 48, 58, 0.8);
+			position: absolute;
+			bottom: 0;
+		}
+	}
 }
