--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -1,26 +1,35 @@
 .filters {
 	&__list {
 		display: flex;
-		justify-content: center;
+		justify-content: left;
+		flex-wrap: wrap;
+		margin-bottom: 25px;
 	}
+	&__item {
+		width: 128px;
+		height: 38px;
+		margin-bottom: 15px;
+	}
+
 	&__item:not(:last-child) {
-		padding-right: 8px;
-		padding-bottom: 34px;
+		margin-right: 8px;
 	}
 }
 
 .filters__btn {
+	width: 100%;
+	height: 100%;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.625;
-	text-align: center;
 	letter-spacing: 0.03em;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	background-color: #f5f4fa;
 	border: none;
 	border-radius: 4px;
-	padding: 6px 22px;
+
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 		color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -39,6 +48,7 @@
 	&__list {
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: center;
 	}
 	&__wrapper {
 		position: relative;
@@ -71,7 +81,7 @@
 
 	&__title {
 		font-weight: 700;
-		font-size: 18px;
+		font-size: 16px;
 		line-height: 2;
 		letter-spacing: 0.06em;
 		padding-top: 20px;
@@ -93,10 +103,6 @@
 	margin-bottom: 30px;
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	&:not(:nth-child(3n)) {
-		margin-right: 30px;
-	}
-
 	&:hover {
 		box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
 			1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -104,5 +110,38 @@
 
 	&:hover .projects__text-popup {
 		transform: translatey(0);
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1151px) {
+	.filters {
+		&__list {
+			justify-content: center;
+		}
+	}
+	.projects {
+		&__title {
+			font-size: 18px;
+		}
+	}
+
+	.projects__item {
+		&:not(:nth-child(2n)) {
+			margin-right: 30px;
+		}
+	}
+}
+
+@media screen and (min-width: 1151px) {
+	.filters {
+		&__list {
+			justify-content: center;
+		}
+	}
+
+	.projects__item {
+		&:not(:nth-child(3n)) {
+			margin-right: 30px;
+		}
 	}
 }
