--- a/sass/layout/_our-atributes.scss
+++ b/sass/layout/_our-atributes.scss
@@ -7,7 +7,7 @@
 		flex-wrap: wrap;
 	}
 
-	&--icon-wrapper {
+	&__icon-wrapper {
 		display: flex;
 		align-items: center;
 		justify-content: center;
