--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -53,6 +53,10 @@
 	padding-bottom: 20px;
 }
 
+.primary-btn_footer {
+  padding: 10px 37px;
+}
+
 .sign-up__btn {
 	position: relative;
 	padding-right: 76px;
